<resources>
    <string name="app_name">GapStep</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Добавить</string>
    <string name="times_and_period">%1$d/%2$d</string>
    <string name="create_habit">Создать привычку</string>
    <string name="create_first_habit">Создайте свою первую привычку</string>
    <string name="date_create_habit">Дата создания привычки: %s</string>
    <string name="change_habit">Изменить привычку</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="useful">Полезная</string>
    <string name="not_useful">Неполезная</string>
    <string name="priority">Приоритет</string>
    <string name="add_habit">Добавить</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    <string name="rgb_format">RGB: (%1$d, %2$d, %3$d)</string>
    <string name="hsv_format">HSV: (%1$d, %2$d, %3$d)</string>
    <string name="value_repeats">Количество повторений</string>
    <string name="goal">Цель</string>
    <string name="save">Сохранить</string>
    <string name="goalError">Кол-во повторений должно быть меньше, чем Ваша цель</string>
    <string name="helper_text_repeats_default_0">По умолчанию: 0</string>
    <string name="helper_text_priority_medium">По умолчанию: средний</string>
    <string name="picked_color">Выбранный цвет:</string>
    <string name="habits">Привычки</string>
    <string name="app_about">О приложении</string>
    <string name="about_app_info">Приложение GapStep\nKotlin + XML</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Введите название привычки</string>
    <string name="text_sort">Сортировать по дате создания:</string>
    <string name="text_new">Новые</string>
    <string name="text_old">Старые</string>

</resources>